login-page alignment issues

--- a/src/app/modules/auth/login/login.component.scss
+++ b/src/app/modules/auth/login/login.component.scss
@@ -14,6 +14,7 @@
 }
 a{
   color: rgb(55, 55, 206);
+  text-decoration: none;
 }
 mat-divider {
     border-top-color: $theme;
